<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintHeight_percent="0.80"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/card_background"
        app:strokeColor="@color/card_stroke_color"
        app:strokeWidth="1.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Stat Content - Scaled with percent instead of padding -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutStatContent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.85"
                app:layout_constraintHeight_percent="0.85"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/ivIcon"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintHeight_percent="0.22"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/spaceBelowIcon"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:tint="@color/tasbeeh_blue_primary"
                    android:contentDescription="@null"/>

                <View
                    android:id="@+id/spaceBelowIcon"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,20:1"
                    app:layout_constraintTop_toBottomOf="@id/ivIcon"
                    app:layout_constraintBottom_toTopOf="@id/tvTitle"/>

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintDimensionRatio="H,8:1"
                    android:text="@string/analysis_placeholder_tvTitle"
                    android:textColor="@color/text_secondary"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="8sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeStepGranularity="1sp"
                    app:layout_constraintTop_toBottomOf="@id/spaceBelowIcon"
                    app:layout_constraintBottom_toTopOf="@+id/spaceBelowTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/spaceBelowTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,30:1"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    app:layout_constraintBottom_toTopOf="@id/tvValue"/>

                <TextView
                    android:id="@+id/tvValue"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.9"
                    app:layout_constraintDimensionRatio="H,3:1"
                    android:text="@string/analysis_placeholder_value"
                    android:textColor="@color/tasbeeh_blue_primary"
                    android:fontFamily="sans-serif-black"
                    android:includeFontPadding="false"
                    android:gravity="center"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="24sp"
                    app:autoSizeMaxTextSize="80sp"
                    app:autoSizeStepGranularity="1sp"
                    app:layout_constraintTop_toBottomOf="@id/spaceBelowTitle"
                    app:layout_constraintBottom_toTopOf="@+id/spaceBelowValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/spaceBelowValue"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="H,35:1"
                    app:layout_constraintTop_toBottomOf="@id/tvValue"
                    app:layout_constraintBottom_toTopOf="@id/tvSubtext"/>

                <TextView
                    android:id="@+id/tvSubtext"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintDimensionRatio="H,10:1"
                    android:text="@string/analysis_placeholder_subtext"
                    android:textColor="@color/text_secondary"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:gravity="center"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="8sp"
                    app:autoSizeMaxTextSize="18sp"
                    app:autoSizeStepGranularity="1sp"
                    app:layout_constraintTop_toBottomOf="@id/spaceBelowValue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
